// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactTestingLibrary ByAltText getByAltText works 1`] = `
<img
  alt="Incredibles 2 Poster"
  src="/incredibles-2.png"
/>
`;

exports[`ReactTestingLibrary ByDisplayValue getByDisplayValue works 1`] = `
<input
  id="lastName"
  type="text"
  value="ReasonML"
/>
`;

exports[`ReactTestingLibrary ByLabelText findAllByLabelText works 1`] = `
Array [
  <input
    id="username-input"
  />,
]
`;

exports[`ReactTestingLibrary ByLabelText findByLabelText works 1`] = `
<input
  id="username-input"
/>
`;

exports[`ReactTestingLibrary ByLabelText getAllByLabelText works 1`] = `
Array [
  <input
    id="username-input"
  />,
]
`;

exports[`ReactTestingLibrary ByLabelText getByLabelText works 1`] = `
<input
  id="username-input"
/>
`;

exports[`ReactTestingLibrary ByLabelText queryAllByLabelText works 1`] = `
Array [
  <input
    id="username-input"
  />,
]
`;

exports[`ReactTestingLibrary ByLabelText queryByLabelText works (element not found) 1`] = `null`;

exports[`ReactTestingLibrary ByLabelText queryByLabelText works 1`] = `
<input
  id="username-input"
/>
`;

exports[`ReactTestingLibrary ByPlaceholderText getByPlaceholderText works 1`] = `
<input
  placeholder="Username"
/>
`;

exports[`ReactTestingLibrary ByRole getByRole works 1`] = `
<button>
  Close dialog
</button>
`;

exports[`ReactTestingLibrary ByTestId getByTestId works 1`] = `
<h1
  data-testid="h1-heading"
>
  Heading
</h1>
`;

exports[`ReactTestingLibrary ByText getByText works 1`] = `
<a
  href="/about"
>
  About ℹ️
</a>
`;

exports[`ReactTestingLibrary ByTitle getByTitle works 1`] = `
<span
  id="2"
  title="Delete"
/>
`;

exports[`ReactTestingLibrary asFragment works 1`] = `
<DocumentFragment>
  <div>
    <h1
      data-testid="h1-heading"
    >
      Heading
    </h1>
  </div>
</DocumentFragment>
`;

exports[`ReactTestingLibrary render works 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1
          data-testid="h1-heading"
        >
          Heading
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1
        data-testid="h1-heading"
      >
        Heading
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
